服务端修改

--- a/Server/WebSite/LocationWeb/Views/Archors/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Archors/Details.cshtml
@@ -132,7 +132,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "Archors", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "Archors", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
