--- a/Server/WebSite/LocationWeb/Views/AreaAuthorization/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorization/Details.cshtml
@@ -34,20 +34,12 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.Describe)
+                    @Html.DisplayNameFor(model => model.Description)
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Describe)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.nFlag)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.nFlag)
-                </dd>
+                    @Html.DisplayFor(model => model.Description)
+                </dd>             
 
                 <dt>
                     @Html.DisplayNameFor(model => model.StartTime)
@@ -90,11 +82,11 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.RepeatType)
+                    @Html.DisplayNameFor(model => model.RepeatDay)
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.RepeatType)
+                    @Html.DisplayFor(model => model.RepeatDay)
                 </dd>
 
                 <dt>
@@ -102,16 +94,16 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Area.Name)
+                    @Html.DisplayFor(model => model.AreaId)
                 </dd>
 
-                <dt>
+                @*<dt>
                     @Html.DisplayNameFor(model => model.LocationCardId)
                 </dt>
 
                 <dd>
                     @Html.DisplayFor(model => model.LocationCard.Name)
-                </dd>
+                </dd>*@
 
                 <dt>
                     @Html.DisplayNameFor(model => model.CreateTime)
@@ -141,7 +133,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "JurisDiction", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "AreaAuthorization", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
