--- a/Server/WebSite/LocationWeb/Views/DevInfo/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/DevInfo/Details.cshtml
@@ -148,7 +148,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "DevInfo", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "DevInfo", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
