--- a/Server/WebSite/LocationWeb/Views/DevModel/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/DevModel/Index.cshtml
@@ -5,10 +5,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>设备模型</h2>
 
 <p>
-    @Ajax.ActionLink("Create New", "Create", "DevModel", new AjaxOptions
+    @Ajax.ActionLink("新建", "Create", "DevModel", new AjaxOptions
 {
     HttpMethod = "GET",
     UpdateTargetId = "modalContent",
@@ -64,7 +64,7 @@
             @Html.DisplayFor(modelItem => item.Class)
         </td>
         <td>           
-            @Ajax.ActionLink("Edit", "Edit", "DevModel", new { id = item.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "DevModel", new { id = item.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
@@ -75,7 +75,7 @@
            OnComplete = "onComplete"
        }) |
 
-            @Ajax.ActionLink("Details", "Details", "DevModel", new { id = item.Id }, new AjaxOptions
+            @Ajax.ActionLink("详情", "Details", "DevModel", new { id = item.Id }, new AjaxOptions
            {
                HttpMethod = "GET",
                UpdateTargetId = "modalContent",
@@ -86,7 +86,7 @@
                OnComplete = "onComplete"
            }) |
 
-            @Ajax.ActionLink("Delete", "Delete", "DevModel", new { id = item.Id }, new AjaxOptions
+            @Ajax.ActionLink("删除", "Delete", "DevModel", new { id = item.Id }, new AjaxOptions
            {
                HttpMethod = "GET",
                UpdateTargetId = "modalContent",
