--- a/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>实时位置</h2>
 
 @*<p>
     @Ajax.ActionLink("Create New", "Create", "LocationCardPosition", new AjaxOptions
