--- a/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Begin.cshtml
+++ b/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Begin.cshtml
@@ -54,7 +54,7 @@
         </fieldset>
     </form>
     <p>
-        <a href="/PersonnelMobileInspection/Index">BackToList</a>
+        <a href="/PersonnelMobileInspection/Index">返 回</a>
     </p>
 </body>
 </html>
