--- a/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Detail.cshtml
+++ b/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Detail.cshtml
@@ -45,7 +45,7 @@
     </form>
     <hr />
     <p>
-        <a href="/PersonnelMobileInspection/Begin/@Model.PID">BackToList</a>
+        <a href="/PersonnelMobileInspection/Begin/@Model.PID">返 回</a>
     </p>
 </body>
 </html>
