--- a/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/PersonnelMobileInspection/Index.cshtml
@@ -63,7 +63,7 @@
         }
     </table>
     <p>
-        <a href="/MobileInspection/Index">BackToList</a>
+        <a href="/MobileInspection/Index">返 回</a>
     </p>
 </body>
 </html>
