--- a/Server/WebSite/LocationWeb/Views/Post/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Post/Details.cshtml
@@ -27,7 +27,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "Post", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "Post", new { id = Model.Id }, new AjaxOptions
             {
                 HttpMethod = "Get",
                 UpdateTargetId = "modalContent",
