--- a/Server/WebSite/LocationWeb/Views/Archors/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Archors/Create.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.Label("区域", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("DepID", ViewBag.selList as IEnumerable<SelectListItem>, "", 1)
+                    @Html.DropDownList("DepID", ViewBag.selList as IEnumerable<SelectListItem>)
                     @Html.ValidationMessage("DepID", "", new { @class = "text-danger" })
                 </div>
             </div>
