--- a/Server/WebSite/LocationWeb/Views/Archors/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Archors/Index.cshtml
@@ -6,10 +6,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>基站</h2>
 
 <p>
-    @Ajax.ActionLink("Create New", "Create", "Archors", new AjaxOptions { HttpMethod = "GET", UpdateTargetId = "modalContent",
+    @Ajax.ActionLink("新建", "Create", "Archors", new AjaxOptions { HttpMethod = "GET", UpdateTargetId = "modalContent",
     InsertionMode = InsertionMode.Replace, OnBegin = "onBegin", OnSuccess = "onSuccess", OnFailure = "onFailure", OnComplete = "onComplete" })
 </p>
 
@@ -78,7 +78,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
-        </td>
+        </td>       
         <td>
             @Html.DisplayFor(modelItem => item.X)
         </td>
@@ -113,13 +113,13 @@
             @Html.DisplayFor(modelItem => item.Enable)
         </td>
         <td>
-            @Ajax.ActionLink("Edit", "Edit", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
+            @Ajax.ActionLink("编辑", "Edit", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
             InsertionMode = InsertionMode.Replace, OnBegin = "onBegin", OnSuccess = "onSuccess", OnFailure = "onFailure", OnComplete = "onComplete" }) |
             
-            @Ajax.ActionLink("Details", "Details", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
+            @Ajax.ActionLink("详情", "Details", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
             InsertionMode = InsertionMode.Replace, OnBegin = "onBegin", OnSuccess = "onSuccess", OnFailure = "onFailure", OnComplete = "onComplete" }) |
            
-            @Ajax.ActionLink("Delete", "Delete", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
+            @Ajax.ActionLink("删除", "Delete", "Archors", new { id = item.Id }, new AjaxOptions{ HttpMethod = "GET", UpdateTargetId = "modalContent",
             InsertionMode = InsertionMode.Replace, OnBegin = "onBegin", OnSuccess = "onSuccess", OnFailure = "onFailure", OnComplete = "onComplete" })
         </td>
     </tr>
