--- a/Server/WebSite/LocationWeb/Views/Area/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Area/Details.cshtml
@@ -84,7 +84,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "Area", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "Area", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
