--- a/Server/WebSite/LocationWeb/Views/Area/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Area/Index.cshtml
@@ -6,10 +6,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>区域列表</h2>
 
 <p>
-    @Ajax.ActionLink("Create New", "Create", "Area", new AjaxOptions
+    @Ajax.ActionLink("新建", "Create", "Area", new AjaxOptions
     {
         HttpMethod = "GET",
         UpdateTargetId = "modalContent",
@@ -73,7 +73,7 @@
                 @Html.DisplayFor(modelItem => item.KKS)
             </th>
             <td>
-                @Html.DisplayFor(modelItem => item.ParentId)
+                @Html.DisplayFor(modelItem => item.Parent.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Number)
@@ -88,7 +88,7 @@
                 @Html.DisplayFor(modelItem => item.InitBoundId)
             </td>
             <td>
-                @Ajax.ActionLink("Edit", "Edit", "Area", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("编辑", "Edit", "Area", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "GET",
                    UpdateTargetId = "modalContent",
@@ -99,7 +99,7 @@
                    OnComplete = "onComplete"
                }) |
 
-                @Ajax.ActionLink("Details", "Details", "Area", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("详情", "Details", "Area", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "GET",
                    UpdateTargetId = "modalContent",
@@ -110,7 +110,7 @@
                    OnComplete = "onComplete"
                }) |
 
-                @Ajax.ActionLink("Delete", "Delete", "Area", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("删除", "Delete", "Area", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "GET",
                    UpdateTargetId = "modalContent",
