--- a/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
@@ -31,20 +31,12 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Describe, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Describe, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Describe, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.nFlag, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.nFlag, ViewBag.EnumList as IEnumerable<SelectListItem>)
-                    @Html.ValidationMessageFor(model => model.nFlag, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            </div>            
 
             <div class="form-group">
                 @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -87,13 +79,13 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.RepeatType, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.RepeatDay, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @foreach (var item in ViewBag.RepeatTypeList)
-                {
-                    if (Model.RepeatType.Contains(item.Value))
+                    @*@foreach (var item in ViewBag.RepeatTypeList)
                     {
-                            <input type="checkbox" name="RepeatType" value="@item.Value" id="@item.Value" checked="checked" />
+                        if (Model.RepeatDay == item.RepeatDay)
+                        {
+                            <input type="checkbox" name="RepeatType" value="@item.Value" id="@item.Value" checked="checked" />                          
                             <label for="@item.Value">@item.Value</label>
                         }
                         else
@@ -101,9 +93,9 @@
                             <input type="checkbox" name="RepeatType" value="@item.Value" id="@item.Value" />
                             <label for="@item.Value">@item.Value</label>
                         }
-                    }
-
-                    @Html.ValidationMessageFor(model => model.RepeatType, "", new { @class = "text-danger" })
+                    }*@
+                    @Html.DropDownListFor(model => model.RepeatDay, ViewBag.RepeatTypeList as IEnumerable<SelectListItem>)
+                    @Html.ValidationMessageFor(model => model.RepeatDay, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -115,13 +107,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.LocationCardId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.LocationCardId, ViewBag.TagList as IEnumerable<SelectListItem>, "", 1)
                     @Html.ValidationMessageFor(model => model.LocationCardId, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
