--- a/Server/WebSite/LocationWeb/Views/AreaAuthorizationRecord/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorizationRecord/Details.cshtml
@@ -149,7 +149,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "AreaAuthorizationRecord", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "AreaAuthorizationRecord", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
