--- a/Server/WebSite/LocationWeb/Views/CardRole/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/CardRole/Details.cshtml
@@ -35,7 +35,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "CardRole", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "CardRole", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
