--- a/Server/WebSite/LocationWeb/Views/Departments/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Departments/Details.cshtml
@@ -60,7 +60,7 @@
         </div>
 
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "Departments", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "Departments", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
