--- a/Server/WebSite/LocationWeb/Views/DevModel/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/DevModel/Details.cshtml
@@ -52,7 +52,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "DevModel", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "DevModel", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
