--- a/Server/WebSite/LocationWeb/Views/DevType/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/DevType/Details.cshtml
@@ -61,7 +61,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "DevType", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "DevType", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
