--- a/Server/WebSite/LocationWeb/Views/KKSCode/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/KKSCode/Details.cshtml
@@ -68,7 +68,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "KKSCode", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "KKSCode", new { id = Model.Id }, new AjaxOptions
        {
            HttpMethod = "Get",
            UpdateTargetId = "modalContent",
