--- a/Server/WebSite/LocationWeb/Views/LocationCard/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/Details.cshtml
@@ -75,7 +75,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "LocationCard", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "LocationCard", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
