--- a/Server/WebSite/LocationWeb/Views/LocationCard/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/Edit.cshtml
@@ -45,13 +45,21 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.CardRoleId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.CardRoleId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.CardRoleId, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.CardRole, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.CardRoleId, ViewBag.selList as IEnumerable<SelectListItem>, "", 1)
+                    @Html.ValidationMessageFor(model => model.CardRoleId, "", new { @class = "text-danger" })
+                </div>
+            </div>   
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Power, htmlAttributes: new { @class = "control-label col-md-2" })
