--- a/Server/WebSite/LocationWeb/Views/MobileInspectionItem/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/MobileInspectionItem/Create.cshtml
@@ -30,7 +30,7 @@
         <h6><input type="submit" value="Create" /></h6>
     </form>
     <p>
-        <a href="/MobileInspection/Edit/@Model.PID">BackToList</a>
+        <a href="/MobileInspection/Edit/@Model.PID">返 回</a>
     </p>
 </body>
 </html>
