--- a/Server/WebSite/LocationWeb/Views/OperationTicket/CreateItem.cshtml
+++ b/Server/WebSite/LocationWeb/Views/OperationTicket/CreateItem.cshtml
@@ -1,5 +1,9 @@
 ﻿@model DbModel.Location.Work.OperationItem
 
+@{
+    ViewBag.Title = "CreateItem";
+}
+
 <!DOCTYPE html>
 
 <html>
@@ -12,17 +16,18 @@
             text-align: right;
         }
     </style>
-    <title>Create</title>
+    <title>CreateItem</title>
 </head>
 <body>
-    <h2>Create</h2>
+    <h2>CreateItem</h2>
     <form action="/OperationTicket/CreateItem2">
         <input type="hidden" name="TicketId" value=@Model.TicketId />
-        <span>操作时间：</span><input type="time" name="OperationTime" value=@Model.OperationTime.ToString("yyyy-MM-ddThh:mm:ss") /><br/>
+        <span>操作时间：</span><input type="time" name="OperationTime" value=@Model.OperationTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
         <span>记号：</span><input type="checkbox" name="Mark" value="true" /><br />
         <span>顺序：</span><input type="text" name="OrderNum" value=@Model.OrderNum /><br />
         <span>操作项目：</span><input type="text" name="Item" value=@Model.Item /><br />
-        <h6><input type="submit" value="Create"/></h6>
+        <input type="submit" value="Create" /> |
+        <a href="/OperationTicket/Edit/@Model.TicketId">返 回</a>
     </form>
 </body>
 </html>
