--- a/Server/WebSite/LocationWeb/Views/Personnel/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Personnel/Create.cshtml
@@ -25,7 +25,7 @@
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>     
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -83,9 +83,7 @@
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            
-
+         
             <div class="form-group">
                 @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -105,7 +103,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Enabled, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Enabled, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Enabled, new { htmlAttributes = new { @class = "checkbox" } })
                     @Html.ValidationMessageFor(model => model.Enabled, "", new { @class = "text-danger" })
                 </div>
             </div>
