--- a/Server/WebSite/LocationWeb/Views/Personnel/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Personnel/Details.cshtml
@@ -97,7 +97,7 @@
             </dl>
         </div>
         <p>
-            @Ajax.ActionLink("Edit", "Edit", "Personnel", new { id = Model.Id }, new AjaxOptions
+            @Ajax.ActionLink("编辑", "Edit", "Personnel", new { id = Model.Id }, new AjaxOptions
            {
                HttpMethod = "Get",
                UpdateTargetId = "modalContent",
