--- a/Server/WebSite/LocationWeb/Views/Personnel/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Personnel/Edit.cshtml
@@ -105,7 +105,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Enabled, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Enabled, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Enabled, new { htmlAttributes = new { @class = "checkbox" } })
                     @Html.ValidationMessageFor(model => model.Enabled, "", new { @class = "text-danger" })
                 </div>
             </div>
