--- a/Server/WebSite/LocationWeb/Views/Post/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Post/Index.cshtml
@@ -7,10 +7,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>岗位</h2>
 
 <p>
-    @Ajax.ActionLink("Create New", "Create", "Post", new AjaxOptions
+    @Ajax.ActionLink("新建", "Create", "Post", new AjaxOptions
     {
         HttpMethod = "GET",
         UpdateTargetId = "modalContent",
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Ajax.ActionLink("Edit", "Edit", "Post", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("编辑", "Edit", "Post", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "Get",
                    UpdateTargetId = "modalContent",
@@ -57,7 +57,7 @@
                    OnComplete = "onComplete"
                }) |
 
-                @Ajax.ActionLink("Details", "Details", "Post", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("详情", "Details", "Post", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "GET",
                    UpdateTargetId = "modalContent",
@@ -68,7 +68,7 @@
                    OnComplete = "onComplete"
                }) |
 
-                @Ajax.ActionLink("Delete", "Delete", "Post", new { id = item.Id }, new AjaxOptions
+                @Ajax.ActionLink("删除", "Delete", "Post", new { id = item.Id }, new AjaxOptions
                {
                    HttpMethod = "GET",
                    UpdateTargetId = "modalContent",
